# thesis-desi-cmb-fli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  review_report.md
.github/workflows/: ci.yml  docs.yml
configs/: README.md  demo.yaml
configs/04_field_level_inference/: config.yaml  run.sbatch  submit.py
configs/05_cmb_lensing/: config.yaml  run.sbatch  submit.py
configs/inference/: config.yaml  run.sbatch  submit.py
configs/nersc/: perlmutter.yml
configs/nersc/slurm/: nuts_perlmutter.sbatch  template_perlmutter.sbatch
data/: N_L_kk_act_dr6_lensing_v1_baseline.txt
docs/: contributing.md  data_access.md  getting_started.md  hpc.md  index.md  pipeline.md  roadmap.md  synthetic.md
docs/figures/: fli_architecture.mmd
env/: environment.yml
figures/: README.md
notebooks/: 01_initial_conditions_demo.ipynb  02_gravitational_evolution_demo.ipynb  04_field_level_inference.ipynb  05_cmb_lensing.ipynb  FLI_introduction.ipynb  README.md
scripts/: 04_field_level_inference.py  05_cmb_lensing.py  analyze_fisher_scales.py  analyze_run.py  benchmark_highz_cl_modes.py  check_box_size_impact.py  check_desi_ingest.py  compare_runs.py  merge_batches.py  plot_cmb_noise_comparison.py  plot_kappa_maps.py  plot_lensing_fraction.py  quick_cl_spectra.py  quick_pk_spectra.py  reanalyze_run.py  run_demo.py  run_inference.py  run_synthetic_comparison.py  sync_citation.py  test_omega_m_effect.py
src/desi_cmb_fli/: __init__.py  bdec.py  bricks.py  chains.py  cmb_lensing.py  evolution.py  galaxy_bias.py  initial_conditions.py  metrics.py  model.py  nbody.py  plot.py  samplers.py  utils.py  validation.py
src/desi_cmb_fli/analysis/: plots.py  power.py
src/desi_cmb_fli/data/: README.md  loaders.py
src/desi_cmb_fli/inference/: fli.py  fli_flat.py  three_by_two.py
src/desi_cmb_fli/sim/: flat_sky.py  jaxpm_wrapper.py
src/desi_cmb_fli/utils/: __init__.py  logging.py
tests/: conftest.py  test_cmb_lensing.py  test_config.py  test_demo.py  test_desi_ingest.py  test_evolution.py  test_fourier_gaussian.py  test_galaxy_bias.py  test_imports.py  test_initial_conditions.py  test_loaders.py  test_logging.py  test_model.py  test_physics_validation.py  test_plots.py  test_power.py  test_synthetic.py
