[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desi-cmb-fli"
version = "0.1.0"
description = "Scaffold for DESI × CMB lensing field-level inference thesis work"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jonathan Hawla", email = "jonathan.hawla@icloud.com"}]
keywords = [
    "cosmology",
    "field-level inference",
    "DESI",
    "Planck",
    "ACT",
    "CMB lensing",
    "large-scale structure",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
  "matplotlib",
  "pandas>=2.1",
]
analysis = [
  "jax>=0.4.23",
  "jaxlib>=0.4.23",
  "numpyro>=0.13",
  "jaxpm==0.1.6",
  "mpi4jax>=0.3.15",
  "jax-cosmo @ git+https://github.com/DifferentiableUniverseInitiative/jax_cosmo@master",
]
notebooks = [
  "jupyter>=1.0",
  "jupyterlab>=4.0",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "pymdown-extensions",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --color=yes"
