[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desi-cmb-fli"
version = "0.1.0"
description = "Scaffold for DESI × CMB lensing field-level inference thesis work"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jonathan Hawla", email = "jonathan.hawla@icloud.com"}]
keywords = [
    "cosmology",
    "field-level inference",
    "DESI",
    "Planck",
    "ACT",
    "CMB lensing",
    "large-scale structure",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "fitsio>=1.2",
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "jax-cosmo>=0.1.0",
  "numpyro>=0.13",
  "jaxpm==0.0.2",
  "diffrax>=0.4.0",
  "blackjax>=1.0",
  "getdist>=1.4",
  "corner>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "pandas>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --color=yes"
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning",
    "ignore:Explicitly requested dtype.*is not available.*will be truncated:UserWarning",
]
